force-app/main/default/objects/Position_info__c/Position_info__c.object-meta.xml
<CustomObject>
    <label>Position info</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Position info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>