force-app/main/default/objects/Position_info__c/fields/Functional_area__c.field-meta.xml
<CustomField>
    <fullName>Functional_area__c</fullName>
    <label>Functional area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>