force-app/main/default/objects/Position_info__c/fields/job_description_details__c.field-meta.xml
<CustomField>
    <fullName>job_description_details__c</fullName>
    <label>job description details</label>
    <type>TextArea</type>
</CustomField>