force-app/main/default/objects/Position_info__c/fields/Max_pay__c.field-meta.xml
<CustomField>
    <fullName>Max_pay__c</fullName>
    <label>Max pay</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>