force-app/main/default/objects/Position_info__c/fields/Minimum_pay__c.field-meta.xml
<CustomField>
    <fullName>Minimum_pay__c</fullName>
    <label>Minimum pay</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>