force-app/main/default/objects/Position_info__c/fields/Position_name__c.field-meta.xml
<CustomField>
    <fullName>Position_name__c</fullName>
    <label>Position name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>