force-app/main/default/objects/Position_info__c/fields/position_requirement_closed__c.field-meta.xml
<CustomField>
    <fullName>position_requirement_closed__c</fullName>
    <label>position requirement closed</label>
    <type>Date</type>
</CustomField>