force-app/main/default/objects/Position_info__c/fields/position_requires_travel__c.field-meta.xml
<CustomField>
    <fullName>position_requires_travel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires travel or not.</description>
    <label>position requires travel</label>
    <type>Checkbox</type>
</CustomField>