force-app/main/default/objects/Position_info__c/recordTypes/Standard_position.recordType-meta.xml
<RecordType>
    <fullName>Standard_position</fullName>
    <active>true</active>
    <label>Standard Position</label>
</RecordType>