force-app/main/default/objects/Position_info__c/validationRules/checking_minimum_pay.validationRule-meta.xml
<ValidationRule>
    <fullName>checking_minimum_pay</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_pay__c   &gt;  Max_pay__c</errorConditionFormula>
    <errorMessage>Minimum pay should not exceed maximum pay.</errorMessage>
</ValidationRule>